Overflow fix (#9)
* Fix article overflow

* 0.0.34

--- a/src/theme/default/theme.css
+++ b/src/theme/default/theme.css
@@ -86,6 +86,10 @@ main > .container {
   @apply flex flex-col md:flex-row;
 }
 
+main > .container > section {
+  @apply min-w-0;
+}
+
 main .back {
   @apply text-gray-500 dark:text-gray-500;
 }
